--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-38958899-1']);_gaq.push(['_trackP
 		</a>
 	</header>
 	<section id="hero">
+        <div class="section-background"></div>
 		<header>
 			<h1 id="heroHeader">Welcome to <b>Brickimedia</b></h1>
 			<span>An open project to create the largest LEGO fan network on the web</span>
@@ -72,37 +73,39 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-38958899-1']);_gaq.push(['_trackP
 		</div>
 	</section>
 	<div class="text-container" id="blue-container">
+        <div class="section-background"></div>
 		<section id="about">
 			<header>
 				<h1>What is Brickimedia?</h1>
 			</header>
 			<p>Brickimedia is an open network of LEGO fan communities founded in early 2013. In addition to a <a href="//meta.brickimedia.org/">coordination wiki</a>, Brickimedia hosts 6 projects: <a href="//en.brickimedia.org/">Brickipedia</a>, <a href="//customs.brickimedia.org/">Customs</a>, <a href="//stories.brickimedia.org/">LEGO Stories Wiki</a>, <a href="//ideas.brickimedia.org/">LEGO Ideas Wiki</a>, <a href="//books.brickimedia.org/">Brickibooks</a>, and <a href="//minifigures.brickimedia.org/">LEGO Minifigures Online Wiki</a>.</p>
-			
+
 			<p>Brickimedia was originally launched in February 2013, but several months later the site's data was lost during an attack on its webhost. Since that downtime, Brickimedia has been through several testing periods and is now officially open!</p>
-		<aside id="circles">
-			<div class="circle-container" id="circle-projects">
-				<div class="circle"></div>
-				<div class="circle-text">
-					<div class="circle-number">6</div><span>projects</span>
-				</div>
-			</div>
-			<div class="circle-container" id="circle-articles">
-				<div class="circle"></div>
-				<div class="circle-text">
-					<div class="circle-number"></div><span>articles</span>
-				</div>
-			</div>
-			<div class="circle-container" id="circle-accounts">
-				<div class="circle"></div>
-				<div class="circle-text">
-					<div class="circle-number"></div><span>accounts</span>
-				</div>
-			</div>
-			<div id="stretch"></div>
+    		<aside id="circles">
+    			<div class="circle-container" id="circle-projects">
+    				<div class="circle"></div>
+    				<div class="circle-text">
+    					<div class="circle-number">6</div><span>projects</span>
+    				</div>
+    			</div>
+    			<div class="circle-container" id="circle-articles">
+    				<div class="circle"></div>
+    				<div class="circle-text">
+    					<div class="circle-number"></div><span>articles</span>
+    				</div>
+    			</div>
+    			<div class="circle-container" id="circle-accounts">
+    				<div class="circle"></div>
+    				<div class="circle-text">
+    					<div class="circle-number"></div><span>accounts</span>
+    				</div>
+    			</div>
+    			<div id="stretch"></div>
 			</aside>
 		</section>
 	</div>
 	<div class="text-container" id="red-container">
+        <div class="section-background"></div>
 		<section id="updates">
 			<header>
 				<h1>Recent Updates</h1>
@@ -117,6 +120,7 @@ var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-38958899-1']);_gaq.push(['_trackP
 		</section>
 	</div>
 	<div class="text-container" id="white-container">
+        <div class="section-background"></div>
 		<section id="contribute">
 			<header>
 				<h1>Be a Part</h1>
